# satellite-interoperability

./: README.md
Analysis/: Analysis_DSS_SMP2.xlsx
docs/analysis/: ANALYSIS_ISIS_DSS.xlsx  Analysis_SMP2_ECSSSMP.xlsx  interfaces_dss_vs_smp2.xlsx
modelling/DSS/: LEVEL_1_DSS.uml  UML_Standard_Profile.Dependency_Matrix_Profile.profile.uml  UML_Standard_Profile.MagicDraw_Profile.DSL_Customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Find_By_Text.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Traceability_customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.profile.uml  UML_Standard_Profile.Validation_Profile.profile.uml
modelling/ISIS/: ISIS.uml  UML_Standard_Profile.Dependency_Matrix_Profile.profile.uml  UML_Standard_Profile.MagicDraw_Profile.DSL_Customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Find_By_Text.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Traceability_customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.profile.uml  UML_Standard_Profile.Validation_Profile.profile.uml
src/: README.md
src/tasi.sve.dss/: CMakeLists.txt  Makefile  metadata.n3
src/tasi.sve.dss/ext/libs/dss_level_1/: CMemoryExport.cpp  CMemoryExport.h  GenericObject.cpp  GenericObject.h  GenericTypes.h  Input_file.cpp  Input_file.h  MathLib.cpp  MathLib.h  dss_ini.set
src/tasi.sve.dss/ext/libs/dss_level_2/: GYRO_HONEYWELL.cpp  GYRO_HONEYWELL.h  SUM.cpp  SUM.h
src/tasi.sve.dss/src/: tasi.sve.dss.cpp  tasi.sve.dss.cpp~  tasi.sve.dss.h  tasi.sve.dss.pkg.cpp
src/tasi.sve.dss/src/tasi/sve/dss/: DssRoot.cpp  DssRoot.h  DssRootForward.h  DssRootSmp.cpp  GyroHoneywell.cpp  GyroHoneywellSmp.cpp  SumL3.cpp  SumL3.h  SumL3Forward.h  SumL3Smp.cpp
src/tasi.sve.dss/umf/: SMP2.Smp.Smp.Attributes.profile.uml  UMF.DocBook_Profile.profile.uml  UMF.SMDL_Profile.profile.uml  UMF.UMF_Profile.Communications_Viewpoint.profile.uml  UMF.UMF_Profile.Enterprise_Viewpoint.profile.uml  UMF.UMF_Profile.Functional_Viewpoint.profile.uml  UMF.UMF_Profile.Information_Viewpoint.profile.uml  UMF.UMF_Profile.Physical_Viewpoint.profile.uml  UML_Standard_Profile.Dependency_Matrix_Profile.profile.uml  UML_Standard_Profile.MagicDraw_Profile.DSL_Customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Find_By_Text.profile.uml  UML_Standard_Profile.MagicDraw_Profile.Traceability_customization.profile.uml  UML_Standard_Profile.MagicDraw_Profile.profile.uml  UML_Standard_Profile.Validation_Profile.profile.uml  tasi.sve.dss.cat  tasi.sve.dss.mdxml  tasi.sve.dss.mdxml.bak  tasi.sve.dss.pkg  tasi.sve.dss.uml
